[gd_scene format=3 uid="uid://bmwr40mr2hksh"]

[ext_resource type="Script" uid="uid://gyll5jd45yex" path="res://Skripts/CardManager.gd" id="1_21xkr"]
[ext_resource type="PackedScene" uid="uid://buuua4bvu6x6f" path="res://Scenes/CardSlotEnemy.tscn" id="3_6bp64"]
[ext_resource type="Script" uid="uid://bux0hvivo8jpk" path="res://Skripts/Playerhand.gd" id="3_344ge"]
[ext_resource type="Script" uid="uid://clniikb6aa6p6" path="res://Skripts/OpponentHand.gd" id="4_hptm8"]
[ext_resource type="PackedScene" uid="uid://buwwhfsikynve" path="res://Scenes/deck.tscn" id="4_kry3j"]
[ext_resource type="Script" uid="uid://bq8qvq4k5e2l7" path="res://Skripts/CardSlot.gd" id="5_6iyac"]
[ext_resource type="PackedScene" uid="uid://b6uslatiyhddw" path="res://Scenes/CardSlot.tscn" id="5_kry3j"]
[ext_resource type="Script" uid="uid://c1jhjjj6ff5d7" path="res://Skripts/InputManager.gd" id="6_d1ilt"]
[ext_resource type="Script" uid="uid://bcaqyqw36bacy" path="res://Skripts/OpponentDeck.gd" id="8_d1ilt"]
[ext_resource type="Texture2D" uid="uid://cwo20f84gduyc" path="res://Pics/Bag.png" id="9_fdnlq"]
[ext_resource type="Script" uid="uid://box830fsci70p" path="res://Skripts/BattleManagerSkript.gd" id="10_6iyac"]
[ext_resource type="Script" uid="uid://bvve0i0hvocqw" path="res://Skripts/ContinueButton.gd" id="11_d1ilt"]
[ext_resource type="AudioStream" uid="uid://diptyy4sr3amn" path="res://Sounds/Sound1.wav" id="13_fdnlq"]
[ext_resource type="AudioStream" uid="uid://cy1jivn24jjwk" path="res://Sounds/Death_bomb.mp3" id="14_jkdf5"]

[node name="Main" type="Node2D" unique_id=40358678]

[node name="CardManager" type="Node2D" parent="." unique_id=1267260433]
script = ExtResource("1_21xkr")

[node name="PlayerHand" type="Node2D" parent="." unique_id=1954708184]
script = ExtResource("3_344ge")

[node name="PlayerDeck" parent="." unique_id=368514955 instance=ExtResource("4_kry3j")]
position = Vector2(158, 850)

[node name="CardSlots_Player" type="Node2D" parent="." unique_id=287090504]

[node name="CardSlot1" parent="CardSlots_Player" unique_id=1031181629 instance=ExtResource("5_kry3j")]
position = Vector2(600, 600)
script = ExtResource("5_6iyac")

[node name="CardSlot2" parent="CardSlots_Player" unique_id=1744993710 instance=ExtResource("5_kry3j")]
position = Vector2(750, 600)
script = ExtResource("5_6iyac")

[node name="CardSlot3" parent="CardSlots_Player" unique_id=1690882529 instance=ExtResource("5_kry3j")]
position = Vector2(900, 600)
script = ExtResource("5_6iyac")

[node name="CardSlot4" parent="CardSlots_Player" unique_id=889572711 instance=ExtResource("5_kry3j")]
position = Vector2(1050, 600)
script = ExtResource("5_6iyac")

[node name="CardSlot5" parent="CardSlots_Player" unique_id=1705288064 instance=ExtResource("5_kry3j")]
position = Vector2(1200, 600)
script = ExtResource("5_6iyac")

[node name="CardSlots_Enemy" type="Node2D" parent="." unique_id=1453268792]

[node name="CardSlot1" parent="CardSlots_Enemy" unique_id=1744934376 instance=ExtResource("3_6bp64")]
position = Vector2(600, 400)

[node name="CardSlot2" parent="CardSlots_Enemy" unique_id=302198417 instance=ExtResource("3_6bp64")]
position = Vector2(750, 400)

[node name="CardSlot3" parent="CardSlots_Enemy" unique_id=1343401586 instance=ExtResource("3_6bp64")]
position = Vector2(900, 400)

[node name="CardSlot4" parent="CardSlots_Enemy" unique_id=714707243 instance=ExtResource("3_6bp64")]
position = Vector2(1050, 400)

[node name="CardSlot5" parent="CardSlots_Enemy" unique_id=709054749 instance=ExtResource("3_6bp64")]
position = Vector2(1200, 400)

[node name="OpponentHand" type="Node2D" parent="." unique_id=834570780]
script = ExtResource("4_hptm8")

[node name="OpponentDeck" type="Node2D" parent="." unique_id=365820089]
position = Vector2(1800, 100)
script = ExtResource("8_d1ilt")

[node name="Sprite2D" type="Sprite2D" parent="OpponentDeck" unique_id=1479028769]
z_index = -2
position = Vector2(-16, 30)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_fdnlq")
flip_h = true

[node name="InputManager" type="Node2D" parent="." unique_id=620736888]
script = ExtResource("6_d1ilt")

[node name="BattleManager" type="Node" parent="." unique_id=2115354227]
script = ExtResource("10_6iyac")

[node name="Texts" type="Node2D" parent="." unique_id=526805144]
position = Vector2(1375, 291)

[node name="Health_Enemy" type="RichTextLabel" parent="Texts" unique_id=1741568441]
offset_left = -40.0
offset_top = -100.0
offset_right = 260.0
offset_bottom = 200.0
theme_override_font_sizes/normal_font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health_Player" type="RichTextLabel" parent="Texts" unique_id=1955239820]
offset_left = -40.0
offset_top = 220.0
offset_right = 260.0
offset_bottom = 520.0
theme_override_font_sizes/normal_font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost_Player" type="RichTextLabel" parent="Texts" unique_id=2112016811]
offset_left = 238.0
offset_top = 653.0
offset_right = 488.0
offset_bottom = 748.0
theme_override_font_sizes/normal_font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Win" type="RichTextLabel" parent="Texts" unique_id=602786402]
visible = false
offset_left = -920.0
offset_top = -201.0
offset_right = -30.0
offset_bottom = 83.0
theme_override_font_sizes/normal_font_size = 199
text = "YOU WIN"

[node name="Loose" type="RichTextLabel" parent="Texts" unique_id=1304955312]
visible = false
offset_left = -939.0
offset_top = -203.0
offset_right = 71.0
offset_bottom = 81.0
theme_override_font_sizes/normal_font_size = 199
text = "YOU LOST"

[node name="Continue_Button" type="Button" parent="." unique_id=1233731211]
process_mode = 2
visible = false
offset_left = 760.0
offset_top = 478.0
offset_right = 1060.0
offset_bottom = 603.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0.4)
theme_override_font_sizes/font_size = 61
disabled = true
text = "Continue"
script = ExtResource("11_d1ilt")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="." unique_id=1017366725]
offset_left = 375.0
offset_top = 460.0
offset_right = 495.0
offset_bottom = 530.0
theme_override_font_sizes/font_size = 25
text = "End Turn"
icon_alignment = 1

[node name="Sounds" type="Node2D" parent="." unique_id=433700582]
position = Vector2(436, 88)

[node name="Hit_Sound" type="AudioStreamPlayer" parent="Sounds" unique_id=520214020]
stream = ExtResource("13_fdnlq")

[node name="Explosion_Sound" type="AudioStreamPlayer" parent="Sounds" unique_id=1137004308]
stream = ExtResource("14_jkdf5")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=917862006]
z_index = -11
position = Vector2(-167.915, 0)
scale = Vector2(3.24, 3.24)
centered = false

[connection signal="pressed" from="Continue_Button" to="Continue_Button" method="_on_pressed"]
[connection signal="pressed" from="Button" to="BattleManager" method="_on_button_pressed"]
